--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[tool.pytest.ini_options]
+pythonpath = [".", "src",]
+asyncio_mode = "auto"
+
 [tool.poetry]
 name = "clean-arch-example"
 version = "0.1.0"
